Checkout submodules during azure builds

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,6 @@
+- checkout: self  # self represents the repo where the initial Pipelines YAML file was found
+  submodules: true
+
 jobs:
  - job: Linux
    pool:
