--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -118,6 +118,7 @@ jobs:
     - checkout: self  # self represents the repo where the initial Pipelines YAML file was found
       submodules: true
     - script: |
+        brew tap AdoptOpenJDK/openjdk
         brew install adoptopenjdk-openjdk11
         brew install ant
       displayName: 'Setup JDK'
