Install ant on linux image

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,10 @@ jobs:
    steps:
     - checkout: self  # self represents the repo where the initial Pipelines YAML file was found
       submodules: true
+    - script: |
+        apt-get update
+        apt-get install ant
+      displayName: 'Install Ant'
     - task: Gradle@2
       inputs:
         workingDirectory: ''
