--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -113,8 +113,8 @@ jobs:
         wget "https://download.java.net/java/ga/jdk11/openjdk-11_osx-x64_bin.tar.gz" -O "build/jdk.tar.gz"
         sudo tar xvzf build/jdk.tar.gz -C /Library/Java/JavaVirtualMachines/
         export JAVA_HOME=/Library/Java/JavaVirtualMachines/jdk-11.jdk/Contents/Home/
-        brew install ant
-      displayName: 'Setup JDK and Ant'
+        brew install ant binutils
+      displayName: 'Setup JDK Ant and Binutils'
     - task: Gradle@2
       inputs:
         workingDirectory: ''
