--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,6 +5,38 @@ resources:
 
 
 jobs:
+ - job: Linux_Arm
+   pool:
+    vmImage: 'Ubuntu 16.04'
+
+   container: wpilib2019
+
+   steps:
+    - checkout: self  # self represents the repo where the initial Pipelines YAML file was found
+      submodules: true
+    - script: |
+        sudo apt-get update && sudo apt-get install ant -y && sudo rm -rf /var/lib/apt/lists/*
+      displayName: 'Install Ant'
+    - task: Gradle@2
+      inputs:
+        workingDirectory: ''
+        gradleWrapperFile: 'gradlew'
+        gradleOptions: '-Xmx3072m'
+        publishJUnitResults: false
+        testResultsFiles: '**/TEST-*.xml'
+        tasks: 'build'
+        options: '-Pplatform=linux-athena'
+
+    # - task: CopyFiles@2
+    #   inputs:
+    #     contents: 'build\lib\**\*.jar'
+    #     targetFolder: $(Build.ArtifactStagingDirectory)
+
+    # - task: PublishBuildArtifacts@1
+    #   inputs:
+    #     artifactName: 'LinuxJar'
+
+
  - job: Linux
    pool:
     vmImage: 'Ubuntu 16.04'
