--- a/publish.gradle
+++ b/publish.gradle
@@ -11,7 +11,7 @@ publishing {
     }
 }
 
-def pubVersion = project.version
+def pubVersion = ext.version
 
 def outputsFolder = file("$project.buildDir/outputs")
 
@@ -21,10 +21,7 @@ def zipBaseName = '_GROUP_edu_wpi_first_thirdparty_frc2019_opencv_ID_opencv-cpp_
 def jniBaseName = "_GROUP_edu_wpi_first_thirdparty_frc2019_opencv_ID_opencv-jni_CLS"
 def javaBaseName = "_GROUP_edu_wpi_first_thirdparty_frc2019_opencv_ID_opencv-java_CLS"
 
-def versionsOutputFolder = file("$project.buildDir/allOutputs")
-def versionFile = file("$versionsOutputFolder/version.txt")
-
-println project.version
+def versionFile = file("$outputsFolder/version.txt")
 
 task outputVersions() {
     description = 'Prints the versions of this to a file for use by the downstream packaging project'
@@ -33,7 +30,7 @@ task outputVersions() {
 
     doFirst {
         buildDir.mkdir()
-        versionsOutputFolder.mkdir()
+        outputsFolder.mkdir()
     }
 
     doLast {
@@ -98,11 +95,11 @@ task cppLibsZip(type: Zip, dependsOn: [nativeLibLinks, makeShared]) {
         attributes(
                 "Created-By": "WPILib Gradle Build Script",
                 "Implementation-Title": "OpenCV Native Libraries, ${project.platform}",
-                "Implementation-Version": project.version,
+                "Implementation-Version": ext.version,
                 "Implementation-Vendor": "Itseez",
 
                 "Bundle-Name": "${baseName}",
-                "Bundle-Version": project.version,
+                "Bundle-Version": ext.version,
                 "Bundle-License": "https://opensource.org/licenses/BSD-3-Clause",
                 "Bundle-Vendor": "WPILib")
     }
@@ -162,11 +159,11 @@ task jniJar(type: Jar, dependsOn: make) {
         attributes(
                 "Created-By": "WPILib Gradle Build Script",
                 "Implementation-Title": "OpenCV JNI Library, ${project.platform}",
-                "Implementation-Version": project.version,
+                "Implementation-Version": ext.version,
                 "Implementation-Vendor": "Itseez",
 
                 "Bundle-Name": "${baseName}",
-                "Bundle-Version": project.version,
+                "Bundle-Version": ext.version,
                 "Bundle-License": "https://opensource.org/licenses/BSD-3-Clause",
                 "Bundle-Vendor": "WPILib")
     }
@@ -196,11 +193,11 @@ task outputJar(type: Jar, dependsOn: make) {
         attributes(
                 "Created-By": "WPILib Gradle Build Script",
                 "Implementation-Title": "OpenCV",
-                "Implementation-Version": project.version,
+                "Implementation-Version": ext.version,
                 "Implementation-Vendor": "Itseez",
 
                 "Bundle-Name": project.name,
-                "Bundle-Version": project.version,
+                "Bundle-Version": ext.version,
                 "Bundle-License": "https://opensource.org/licenses/BSD-3-Clause",
                 "Bundle-Vendor": "WPILib")
     }
@@ -220,11 +217,11 @@ task sourcesJar(type: Jar, dependsOn: make) {
         attributes(
                 "Created-By": "WPILib Gradle Build Script",
                 "Implementation-Title": "OpenCV Java Sources",
-                "Implementation-Version": project.version,
+                "Implementation-Version": ext.version,
                 "Implementation-Vendor": "Itseez",
 
                 "Bundle-Name": "${project.name}-sources",
-                "Bundle-Version": project.version,
+                "Bundle-Version": ext.version,
                 "Bundle-License": "https://opensource.org/licenses/BSD-3-Clause",
                 "Bundle-Vendor": "WPILib")
     }
