--- a/publish.gradle
+++ b/publish.gradle
@@ -11,7 +11,7 @@ publishing {
     }
 }
 
-def pubVersion = "${project.ext.version}-2"
+def pubVersion = "${project.ext.version}-3"
 
 def outputsFolder = file("$project.buildDir/outputs")
 
@@ -130,10 +130,27 @@ task cppLibsZip(type: Zip, dependsOn: [nativeLibLinks, makeShared]) {
             exclude 'libopencv_*.a'
         }
         from(project.cmakeBuildSharedDirectory.resolve("lib").toFile()) {
-            into project.platformPath + '/shared'
             include '*.so.*.*.*'
+            exclude 'cv2.so'
+            exclude '**/*dephelp*'
+            eachFile { f->
+                f.name = f.naem.replace("${project.ext.version}", "${project.ext.soVersion}")
+            }
+        }
+        from(project.cmakeBuildSharedDirectory.resolve("lib").toFile()) {
+            into project.platformPath + '/shared'
+            include "*.${project.ext.version}.dylib".toString
+            eachFile { f->
+                f.name = f.naem.replace("${project.ext.version}", "${project.ext.soVersion}")
+            }
+            exclude 'cv2.so'
+            exclude '**/*dephelp*'
+        }
+        from(project.cmakeBuildSharedDirectory.resolve("lib").toFile()) {
+            into project.platformPath + '/shared'
+
             include 'libopencv_java*.so'
-            include '*.dylib'
+            include 'libopencv_java*.dylib'
             exclude 'cv2.so'
             exclude '**/*dephelp*'
         }
