--- a/publish.gradle
+++ b/publish.gradle
@@ -134,14 +134,14 @@ task cppLibsZip(type: Zip, dependsOn: [nativeLibLinks, makeShared]) {
             exclude 'cv2.so'
             exclude '**/*dephelp*'
             eachFile { f->
-                f.name = f.naem.replace("${project.ext.version}", "${project.ext.soVersion}")
+                f.name = f.name.replace("${project.ext.version}", "${project.ext.soVersion}")
             }
         }
         from(project.cmakeBuildSharedDirectory.resolve("lib").toFile()) {
             into project.platformPath + '/shared'
-            include "*.${project.ext.version}.dylib".toString
+            include "*.${project.ext.version}.dylib".toString()
             eachFile { f->
-                f.name = f.naem.replace("${project.ext.version}", "${project.ext.soVersion}")
+                f.name = f.name.replace("${project.ext.version}", "${project.ext.soVersion}")
             }
             exclude 'cv2.so'
             exclude '**/*dephelp*'
