Remove lapack, add gtk

--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,8 @@ ext {
             '-DWITH_FFMPEG=OFF',
             '-DWITH_OPENEXR=OFF',
             '-DWITH_GSTREAMER=OFF',
-            '-DWITH_GTK=OFF',
+            '-DWITH_LAPACK=OFF',
+            '-DWITH_GTK=ON',
             '-DWITH_1394=OFF',
             '-DWITH_JASPER=OFF',
             '-DWITH_TIFF=OFF',
