--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,9 +2,42 @@ resources:
   containers:
   - container: wpilib2019
     image: wpilib/roborio-cross-ubuntu:2019-18.04
+  - container: raspbian
+    image:  wpilib/raspbian-cross-ubuntu:18.04
 
 
 jobs:
+ - job: Linux_Arm_Pi
+   pool:
+    vmImage: 'Ubuntu 16.04'
+
+   container: raspbian
+
+   steps:
+    - checkout: self  # self represents the repo where the initial Pipelines YAML file was found
+      submodules: true
+    - script: |
+        sudo apt-get update && sudo apt-get install ant -y && sudo rm -rf /var/lib/apt/lists/*
+      displayName: 'Install Ant'
+    - task: Gradle@2
+      inputs:
+        workingDirectory: ''
+        gradleWrapperFile: 'gradlew'
+        gradleOptions: '-Xmx3072m'
+        publishJUnitResults: false
+        testResultsFiles: '**/TEST-*.xml'
+        tasks: 'build'
+        options: '-Pplatform=linux-raspbian'
+
+    # - task: CopyFiles@2
+    #   inputs:
+    #     contents: 'build\lib\**\*.jar'
+    #     targetFolder: $(Build.ArtifactStagingDirectory)
+
+    # - task: PublishBuildArtifacts@1
+    #   inputs:
+    #     artifactName: 'LinuxJar'
+
  - job: Linux_Arm
    pool:
     vmImage: 'Ubuntu 16.04'
